tests/baselines/reference/importOnAliasedIdentifiers.errors.txt
importOnAliasedIdentifiers.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
importOnAliasedIdentifiers.ts(5,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== importOnAliasedIdentifiers.ts (2 errors) ====
    module A {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface X { s: string }
        export var X: X;
    }
    module B {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface A { n: number }
        import Y = A; // Alias only for module A
        import Z = A.X; // Alias for both type and member A.X
        var v: Z = Z;
    }